--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
+<!DOCTYPE html>
 
+<head>
+    <style>
+        p {
+            font-size: 100px;
+            font-weight: bolder;
+            color: red;
+        }
+        
+    </style>
+</head>
+
+<body>
+    <p>JS/FE Stage#0 2022Q1</p>
+</body>
+
+</html>
